--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             const container = document.getElementById("symbol-container");
             instance.init({}, container);
 
-            // ✅ Simulate PI data going from 0 to 100
+            // Simulate PI data going from 0 to 100
             let val = 0;
             function simulateData() {
               if (val > 100) return;
